feat: implement Excel export functionality
- Add comprehensive Excel export service with workbook generation
- Create separate sheets for each account with detailed transactions
- Include metadata sheet with app info and export statistics
- Add export button to Settings screen with confirmation dialog
- Support for localized number formatting in exported data
- Add export translations for all 13 supported languages
- Install xlsx, expo-file-system, and expo-sharing dependencies
- Update README with Excel export documentation and usage guide

Features:
- Export all accounts and transactions to Excel (.xlsx)
- Each account becomes a separate sheet with transaction history
- Running balance calculations and summary statistics
- Metadata sheet with export info and privacy notes
- Localized numbers for Arabic and Farsi exports
- File sharing functionality across platforms
- Comprehensive error handling and user feedback

Breaking changes: None - fully backward compatible
Dependencies: xlsx@^0.18.5, expo-file-system@^19.0.16, expo-sharing@^14.0.7

--- a/src/locales/ar.json
+++ b/src/locales/ar.json
@@ -101,7 +101,7 @@
   "footerDescription": "LedgerWell يساعدك في تتبع الديون والائتمان مع دعم متعدد العملات وخصوصية كاملة.",
   "copyrightText": "© ٢٠٢٥ Sepehr Mohammady. مفتوح المصدر تحت رخصة MIT.",
   "currencyExists": "العملة {code} موجودة بالفعل",
-    "customCurrencyAdded": "تم إضافة العملة المخصصة {code} بنجاح",
+  "customCurrencyAdded": "تم إضافة العملة المخصصة {code} بنجاح",
   "customCurrencyUpdated": "تم تحديث العملة المخصصة {code} بنجاح",
   "customCurrencyFailed": "فشل في إضافة العملة المخصصة",
   "editCustomCurrency": "تعديل العملة المخصصة",
@@ -122,5 +122,37 @@
   "noTransactionsFound": "لم يتم العثور على معاملات",
   "reset": "إعادة تعيين",
   "settingsSaveFailed": "فشل في حفظ الإعدادات",
-  "totalBalance": "إجمالي الرصيد"
+  "totalBalance": "إجمالي الرصيد",
+  "exportToExcel": "تصدير إلى Excel",
+  "exportData": "تصدير البيانات",
+  "preparingExport": "جاري تحضير التصدير...",
+  "noData": "لا توجد بيانات",
+  "noDataToExport": "لا توجد بيانات متاحة للتصدير. يرجى إضافة بعض الحسابات والمعاملات أولاً.",
+  "exportConfirmation": "تصدير {{accounts}} حسابات مع {{transactions}} معاملات باستخدام العملات: {{currencies}}؟",
+  "export": "تصدير",
+  "exportSuccess": "تم تصدير البيانات بنجاح!",
+  "exportFailed": "فشل التصدير. يرجى المحاولة مرة أخرى.",
+  "exportPreparationFailed": "فشل في تحضير بيانات التصدير.",
+  "exportMetadata": "معلومات التصدير",
+  "appName": "اسم التطبيق",
+  "exportDate": "تاريخ التصدير",
+  "exportDescription": "وصف التصدير",
+  "exportContent": "محتوى التصدير",
+  "exportContentDescription": "يحتوي هذا الملف على جميع بيانات حساباتك ومعاملاتك",
+  "dataPrivacy": "خصوصية البيانات",
+  "dataPrivacyNote": "يتم تصدير جميع البيانات محلياً. لا يتم إرسال أي شيء إلى خوادم خارجية.",
+  "sheetStructure": "هيكل الأوراق",
+  "summarySheet": "ورقة الملخص",
+  "summarySheetDescription": "لمحة عامة عن جميع الحسابات وإحصائياتها",
+  "accountSheets": "أوراق الحسابات",
+  "accountSheetsDescription": "أوراق فردية لكل حساب مع المعاملات التفصيلية",
+  "metadata": "البيانات التعريفية",
+  "summary": "الملخص",
+  "accountInformation": "معلومات الحساب",
+  "runningBalance": "الرصيد الجاري",
+  "finalBalance": "الرصيد النهائي",
+  "totalTransactions": "إجمالي المعاملات",
+  "totalAmount": "إجمالي المبلغ",
+  "lastTransaction": "آخر معاملة",
+  "createdDate": "تاريخ الإنشاء"
 }
