--- a/src/locales/de.json
+++ b/src/locales/de.json
@@ -101,7 +101,7 @@
   "footerDescription": "LedgerWell hilft Ihnen, Schulden und Kredite mit Mehrwährungsunterstützung und vollständiger Privatsphäre zu verfolgen.",
   "copyrightText": "© 2025 Sepehr Mohammady. Open Source unter MIT-Lizenz.",
   "currencyExists": "Währung {code} existiert bereits",
-    "customCurrencyAdded": "Benutzerdefinierte Währung {code} erfolgreich hinzugefügt",
+  "customCurrencyAdded": "Benutzerdefinierte Währung {code} erfolgreich hinzugefügt",
   "customCurrencyUpdated": "Benutzerdefinierte Währung {code} erfolgreich aktualisiert",
   "customCurrencyFailed": "Benutzerdefinierte Währung konnte nicht hinzugefügt werden",
   "editCustomCurrency": "Benutzerdefinierte Währung Bearbeiten",
@@ -122,5 +122,37 @@
   "noTransactionsFound": "Keine Transaktionen gefunden",
   "reset": "Zurücksetzen",
   "settingsSaveFailed": "Fehler beim Speichern der Einstellungen",
-  "totalBalance": "Gesamtsaldo"
+  "totalBalance": "Gesamtsaldo",
+  "exportToExcel": "Export to Excel",
+  "exportData": "Export Data",
+  "preparingExport": "Preparing export...",
+  "noData": "No Data",
+  "noDataToExport": "No data available to export. Please add some accounts and transactions first.",
+  "exportConfirmation": "Export {{accounts}} accounts with {{transactions}} transactions using currencies: {{currencies}}?",
+  "export": "Export",
+  "exportSuccess": "Data exported successfully!",
+  "exportFailed": "Export failed. Please try again.",
+  "exportPreparationFailed": "Failed to prepare export data.",
+  "exportMetadata": "Export Information",
+  "appName": "App Name",
+  "exportDate": "Export Date",
+  "exportDescription": "Export Description",
+  "exportContent": "Export Content",
+  "exportContentDescription": "This file contains all your account and transaction data",
+  "dataPrivacy": "Data Privacy",
+  "dataPrivacyNote": "All data is exported locally. Nothing is sent to external servers.",
+  "sheetStructure": "Sheet Structure",
+  "summarySheet": "Summary Sheet",
+  "summarySheetDescription": "Overview of all accounts and their statistics",
+  "accountSheets": "Account Sheets",
+  "accountSheetsDescription": "Individual sheets for each account with detailed transactions",
+  "metadata": "Metadata",
+  "summary": "Summary",
+  "accountInformation": "Account Information",
+  "runningBalance": "Running Balance",
+  "finalBalance": "Final Balance",
+  "totalTransactions": "Total Transactions",
+  "totalAmount": "Total Amount",
+  "lastTransaction": "Last Transaction",
+  "createdDate": "Created Date"
 }
