--- a/src/locales/fa.json
+++ b/src/locales/fa.json
@@ -122,5 +122,37 @@
   "privacy": "حریم خصوصی",
   "privacyDescription": "داده‌های شما روی دستگاه شما باقی می‌ماند",
   "footerDescription": "LedgerWell به شما کمک می‌کند تا بدهی‌ها و اعتبارات را با پشتیبانی چند ارزی و حریم خصوصی کامل پیگیری کنید.",
-  "copyrightText": "© ۲۰۲۵ سپهر محمدی. متن‌باز تحت مجوز MIT."
+  "copyrightText": "© ۲۰۲۵ سپهر محمدی. متن‌باز تحت مجوز MIT.",
+  "exportToExcel": "صدور به اکسل",
+  "exportData": "صدور داده‌ها",
+  "preparingExport": "در حال آماده‌سازی صدور...",
+  "noData": "داده‌ای وجود ندارد",
+  "noDataToExport": "داده‌ای برای صدور در دسترس نیست. لطفاً ابتدا چند حساب و تراکنش اضافه کنید.",
+  "exportConfirmation": "صدور {{accounts}} حساب با {{transactions}} تراکنش با استفاده از ارزهای: {{currencies}}؟",
+  "export": "صدور",
+  "exportSuccess": "داده‌ها با موفقیت صادر شدند!",
+  "exportFailed": "صدور ناموفق بود. لطفاً دوباره تلاش کنید.",
+  "exportPreparationFailed": "آماده‌سازی داده‌های صدور ناموفق بود.",
+  "exportMetadata": "اطلاعات صدور",
+  "appName": "نام برنامه",
+  "exportDate": "تاریخ صدور",
+  "exportDescription": "شرح صدور",
+  "exportContent": "محتوای صدور",
+  "exportContentDescription": "این فایل شامل تمام داده‌های حساب‌ها و تراکنش‌های شما است",
+  "dataPrivacy": "حریم خصوصی داده‌ها",
+  "dataPrivacyNote": "همه داده‌ها به صورت محلی صادر می‌شوند. هیچ چیز به سرورهای خارجی ارسال نمی‌شود.",
+  "sheetStructure": "ساختار برگه‌ها",
+  "summarySheet": "برگه خلاصه",
+  "summarySheetDescription": "نمای کلی از همه حساب‌ها و آمارهای آن‌ها",
+  "accountSheets": "برگه‌های حساب",
+  "accountSheetsDescription": "برگه‌های جداگانه برای هر حساب با تراکنش‌های تفصیلی",
+  "metadata": "متادیتا",
+  "summary": "خلاصه",
+  "accountInformation": "اطلاعات حساب",
+  "runningBalance": "موجودی جاری",
+  "finalBalance": "موجودی نهایی",
+  "totalTransactions": "کل تراکنش‌ها",
+  "totalAmount": "مقدار کل",
+  "lastTransaction": "آخرین تراکنش",
+  "createdDate": "تاریخ ایجاد"
 }
