--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -90,7 +90,7 @@
   "transactionDescriptionPlaceholder": "What is this transaction for?",
   "fillAllFields": "Please fill in all fields",
   "currencyCodeInvalid": "Currency code must be exactly 3 letters (e.g., USD, EUR)",
-    "validExchangeRate": "Please enter a valid exchange rate",
+  "validExchangeRate": "Please enter a valid exchange rate",
   "about": "About",
   "appDescription": "Personal debt and credit tracking app",
   "version": "Version",
@@ -122,5 +122,37 @@
   "noTransactionsFound": "No transactions found",
   "reset": "Reset",
   "settingsSaveFailed": "Failed to save settings",
-  "totalBalance": "Total Balance"
+  "totalBalance": "Total Balance",
+  "exportToExcel": "Export to Excel",
+  "exportData": "Export Data",
+  "preparingExport": "Preparing export...",
+  "noData": "No Data",
+  "noDataToExport": "No data available to export. Please add some accounts and transactions first.",
+  "exportConfirmation": "Export {{accounts}} accounts with {{transactions}} transactions using currencies: {{currencies}}?",
+  "export": "Export",
+  "exportSuccess": "Data exported successfully!",
+  "exportFailed": "Export failed. Please try again.",
+  "exportPreparationFailed": "Failed to prepare export data.",
+  "exportMetadata": "Export Information",
+  "appName": "App Name",
+  "exportDate": "Export Date",
+  "exportDescription": "Export Description",
+  "exportContent": "Export Content",
+  "exportContentDescription": "This file contains all your account and transaction data",
+  "dataPrivacy": "Data Privacy",
+  "dataPrivacyNote": "All data is exported locally. Nothing is sent to external servers.",
+  "sheetStructure": "Sheet Structure",
+  "summarySheet": "Summary Sheet",
+  "summarySheetDescription": "Overview of all accounts and their statistics",
+  "accountSheets": "Account Sheets",
+  "accountSheetsDescription": "Individual sheets for each account with detailed transactions",
+  "metadata": "Metadata",
+  "summary": "Summary",
+  "accountInformation": "Account Information",
+  "runningBalance": "Running Balance",
+  "finalBalance": "Final Balance",
+  "totalTransactions": "Total Transactions",
+  "totalAmount": "Total Amount",
+  "lastTransaction": "Last Transaction",
+  "createdDate": "Created Date"
 }
