--- a/src/locales/es.json
+++ b/src/locales/es.json
@@ -101,7 +101,7 @@
   "footerDescription": "LedgerWell te ayuda a rastrear deudas y créditos con soporte multi-moneda y privacidad completa.",
   "copyrightText": "© 2025 Sepehr Mohammady. Código abierto bajo Licencia MIT.",
   "currencyExists": "La moneda {code} ya existe",
-    "customCurrencyAdded": "Moneda personalizada {code} agregada exitosamente",
+  "customCurrencyAdded": "Moneda personalizada {code} agregada exitosamente",
   "customCurrencyUpdated": "Moneda personalizada {code} actualizada exitosamente",
   "customCurrencyFailed": "Falló al agregar moneda personalizada",
   "editCustomCurrency": "Editar Moneda Personalizada",
@@ -122,5 +122,37 @@
   "noTransactionsFound": "No se encontraron transacciones",
   "reset": "Restablecer",
   "settingsSaveFailed": "Error al guardar la configuración",
-  "totalBalance": "Saldo total"
+  "totalBalance": "Saldo total",
+  "exportToExcel": "Exportar a Excel",
+  "exportData": "Exportar Datos",
+  "preparingExport": "Preparando exportación...",
+  "noData": "Sin Datos",
+  "noDataToExport": "No hay datos disponibles para exportar. Por favor añade algunas cuentas y transacciones primero.",
+  "exportConfirmation": "¿Exportar {{accounts}} cuentas con {{transactions}} transacciones usando monedas: {{currencies}}?",
+  "export": "Exportar",
+  "exportSuccess": "¡Datos exportados exitosamente!",
+  "exportFailed": "Falló la exportación. Por favor inténtalo de nuevo.",
+  "exportPreparationFailed": "Falló la preparación de datos de exportación.",
+  "exportMetadata": "Información de Exportación",
+  "appName": "Nombre de la App",
+  "exportDate": "Fecha de Exportación",
+  "exportDescription": "Descripción de Exportación",
+  "exportContent": "Contenido de Exportación",
+  "exportContentDescription": "Este archivo contiene todos los datos de tus cuentas y transacciones",
+  "dataPrivacy": "Privacidad de Datos",
+  "dataPrivacyNote": "Todos los datos se exportan localmente. Nada se envía a servidores externos.",
+  "sheetStructure": "Estructura de Hojas",
+  "summarySheet": "Hoja de Resumen",
+  "summarySheetDescription": "Vista general de todas las cuentas y sus estadísticas",
+  "accountSheets": "Hojas de Cuentas",
+  "accountSheetsDescription": "Hojas individuales para cada cuenta con transacciones detalladas",
+  "metadata": "Metadatos",
+  "summary": "Resumen",
+  "accountInformation": "Información de Cuenta",
+  "runningBalance": "Balance Corriente",
+  "finalBalance": "Balance Final",
+  "totalTransactions": "Total de Transacciones",
+  "totalAmount": "Cantidad Total",
+  "lastTransaction": "Última Transacción",
+  "createdDate": "Fecha de Creación"
 }
