--- a/src/locales/fr.json
+++ b/src/locales/fr.json
@@ -122,5 +122,37 @@
   "confirmReset": "Êtes-vous sûr de vouloir réinitialiser toutes les données?",
   "noAccountsFound": "Aucun compte trouvé",
   "noTransactionsFound": "Aucune transaction trouvée",
-  "totalBalance": "Solde Total"
+  "totalBalance": "Solde Total",
+  "exportToExcel": "Exporter vers Excel",
+  "exportData": "Exporter les Données",
+  "preparingExport": "Préparation de l'exportation...",
+  "noData": "Aucune Donnée",
+  "noDataToExport": "Aucune donnée disponible à exporter. Veuillez d'abord ajouter des comptes et des transactions.",
+  "exportConfirmation": "Exporter {{accounts}} comptes avec {{transactions}} transactions utilisant les devises: {{currencies}} ?",
+  "export": "Exporter",
+  "exportSuccess": "Données exportées avec succès !",
+  "exportFailed": "Échec de l'exportation. Veuillez réessayer.",
+  "exportPreparationFailed": "Échec de la préparation des données d'exportation.",
+  "exportMetadata": "Informations d'Exportation",
+  "appName": "Nom de l'Application",
+  "exportDate": "Date d'Exportation",
+  "exportDescription": "Description de l'Exportation",
+  "exportContent": "Contenu de l'Exportation",
+  "exportContentDescription": "Ce fichier contient toutes les données de vos comptes et transactions",
+  "dataPrivacy": "Confidentialité des Données",
+  "dataPrivacyNote": "Toutes les données sont exportées localement. Rien n'est envoyé vers des serveurs externes.",
+  "sheetStructure": "Structure des Feuilles",
+  "summarySheet": "Feuille de Résumé",
+  "summarySheetDescription": "Vue d'ensemble de tous les comptes et leurs statistiques",
+  "accountSheets": "Feuilles de Comptes",
+  "accountSheetsDescription": "Feuilles individuelles pour chaque compte avec transactions détaillées",
+  "metadata": "Métadonnées",
+  "summary": "Résumé",
+  "accountInformation": "Informations du Compte",
+  "runningBalance": "Solde Courant",
+  "finalBalance": "Solde Final",
+  "totalTransactions": "Total des Transactions",
+  "totalAmount": "Montant Total",
+  "lastTransaction": "Dernière Transaction",
+  "createdDate": "Date de Création"
 }
