--- a/src/locales/ko.json
+++ b/src/locales/ko.json
@@ -122,5 +122,37 @@
   "noTransactionsFound": "거래가 없습니다",
   "reset": "초기화",
   "settingsSaveFailed": "설정 저장에 실패했습니다",
-  "totalBalance": "총 잔액"
+  "totalBalance": "총 잔액",
+  "exportToExcel": "Export to Excel",
+  "exportData": "Export Data",
+  "preparingExport": "Preparing export...",
+  "noData": "No Data",
+  "noDataToExport": "No data available to export. Please add some accounts and transactions first.",
+  "exportConfirmation": "Export {{accounts}} accounts with {{transactions}} transactions using currencies: {{currencies}}?",
+  "export": "Export",
+  "exportSuccess": "Data exported successfully!",
+  "exportFailed": "Export failed. Please try again.",
+  "exportPreparationFailed": "Failed to prepare export data.",
+  "exportMetadata": "Export Information",
+  "appName": "App Name",
+  "exportDate": "Export Date",
+  "exportDescription": "Export Description",
+  "exportContent": "Export Content",
+  "exportContentDescription": "This file contains all your account and transaction data",
+  "dataPrivacy": "Data Privacy",
+  "dataPrivacyNote": "All data is exported locally. Nothing is sent to external servers.",
+  "sheetStructure": "Sheet Structure",
+  "summarySheet": "Summary Sheet",
+  "summarySheetDescription": "Overview of all accounts and their statistics",
+  "accountSheets": "Account Sheets",
+  "accountSheetsDescription": "Individual sheets for each account with detailed transactions",
+  "metadata": "Metadata",
+  "summary": "Summary",
+  "accountInformation": "Account Information",
+  "runningBalance": "Running Balance",
+  "finalBalance": "Final Balance",
+  "totalTransactions": "Total Transactions",
+  "totalAmount": "Total Amount",
+  "lastTransaction": "Last Transaction",
+  "createdDate": "Created Date"
 }
