feat: implement Excel import functionality with complete backup/restore system
- Add comprehensive ExcelImportService with 430+ lines of robust Excel parsing
- Support .xlsx and .xls file formats with intelligent data extraction
- Implement smart duplicate detection for accounts and transactions
- Add conflict resolution with Replace vs Merge import modes
- Create validation system with error handling and user feedback
- Add import preview UI with statistics and warnings
- Integrate file picker using expo-document-picker
- Support localized number parsing (Arabic/Farsi numerals)
- Add 20+ translation keys across all 13 supported languages
- Create comprehensive testing documentation
- Update version to 0.5.0 to reflect major new feature

Features:
 Complete backup/restore system via Excel files
 Data migration support between app installations
 Intelligent duplicate detection and conflict resolution
 Multi-language support with localized formatting
 Robust error handling with graceful failure recovery
 Professional UI consistent with app design

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -154,5 +154,32 @@
   "totalTransactions": "Total Transactions",
   "totalAmount": "Total Amount",
   "lastTransaction": "Last Transaction",
-  "createdDate": "Created Date"
+  "createdDate": "Created Date",
+  "importFromExcel": "Import from Excel",
+  "importData": "Import Data",
+  "selectExcelFile": "Please select an Excel file to import data from",
+  "importValidationFailed": "Import Validation Failed",
+  "importPreviewSummary": "Import will add {{accounts}} accounts with {{transactions}} transactions using {{currencies}} currencies",
+  "importPreviewAccounts": "Accounts to import",
+  "andMoreAccounts": "and {{count}} more accounts",
+  "importPreviewDateRange": "Transaction date range",
+  "noTransactionsInRange": "No transactions",
+  "importWarning": "⚠️ This will modify your existing data",
+  "replaceData": "Replace All Data",
+  "mergeData": "Merge with Existing",
+  "processingImport": "Processing import...",
+  "importSuccess": "Import Successful",
+  "importSuccessMessage": "Successfully imported {{accounts}} accounts and {{transactions}} transactions",
+  "importMergeSuccess": "Import completed: Added {{accounts}} accounts and {{transactions}} transactions. Skipped {{skippedAccounts}} duplicate accounts and {{skippedTransactions}} duplicate transactions.",
+  "duplicatesDetected": "Duplicates Detected",
+  "duplicateAccountsFound": "{{count}} duplicate accounts found",
+  "duplicateTransactionsFound": "{{count}} duplicate transactions found",
+  "importFailed": "Import failed: {{error}}",
+  "importExecutionFailed": "Failed to process import data",
+  "noAccountsToImport": "No valid accounts found in the Excel file",
+  "invalidAccountName": "Account {{index}} has invalid name",
+  "invalidAccountCurrency": "Account {{index}} has invalid currency",
+  "emptyTransactionName": "Transaction {{index}} has empty name",
+  "invalidTransactionAmount": "Transaction {{index}} has invalid amount",
+  "invalidTransactionType": "Transaction {{index}} has invalid type"
 }
